[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py2nacos"
version = "0.1.0"
authors = [
  { name="lidaning", email="453882101@qq.com" }
]
description = "A tool that allows an app registers itself with Nacos"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/relidaning/py2nacos"
"Bug Tracker" = "https://github.com/relidaning/py2nacos/issues"